adding twilio text messages for server crashes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 PORT=3000
+TWILIO_SID="C16a231331315425safcfd2bd0597bcc2e4"
+TWILIO_AUTH_TOKEN="440dbadaaewewqeqe028461807b"
+TWILIO_NUMBER="+1323132419"
+ADMIN_NUMBER="+121313919"
 TWITTER_USER_NAME="SHAQ"
 TWITTER_USER_ID_STR="716760281817423872"
 TWITTER_CONSUMER_KEY="XSADAS21213"
